--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,16 +1,19 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
-     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-     xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee 
-     http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
-    version="2.4">
-   <servlet> 
-     <servlet-name>Search</servlet-name>
-     <servlet-class>com.jin.tpdb.Search</servlet-class>
-   </servlet>
-  
-   <servlet-mapping>
-     <servlet-name>Search</servlet-name>
-     <url-pattern>/search</url-pattern>
-   </servlet-mapping>  
+<?xml version="1.0" encoding="UTF-8"?>
+
+<web-app version="3.0"
+         xmlns="http://java.sun.com/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+         metadata-complete="false">
+
+         <servlet>
+                  <servlet-name>health</servlet-name>
+                  <jsp-file>/health.jsp</jsp-file>
+         </servlet>
+         <servlet-mapping>
+                  <servlet-name>health</servlet-name>
+                  <url-pattern>/health</url-pattern>
+         </servlet-mapping>
+         
 </web-app>
+
