--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,17 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>org.jboss.spec</groupId>
-      <artifactId>jboss-javaee-6.0</artifactId>
-      <version>1.0.0.Final</version>
-      <type>pom</type>
-      <scope>provided</scope>
+		<groupId>org.jboss.spec</groupId>
+		<artifactId>jboss-javaee-6.0</artifactId>
+		<version>1.0.0.Final</version>
+		<type>pom</type>
+		<scope>provided</scope>
     </dependency>
+	<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate</artifactId>
+		<scope>provided</scope>
+	</dependency>
   </dependencies>
   <profiles>
     <profile>
