adding dependency to pom

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 	<dependency>
 		<groupId>org.hibernate</groupId>
 		<artifactId>hibernate</artifactId>
+		<version>4.1.1.Final</version>
 		<scope>provided</scope>
 	</dependency>
   </dependencies>
