adding dependency to pom

--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
     </dependency>
 	<dependency>
 		<groupId>org.hibernate</groupId>
-		<artifactId>hibernate</artifactId>
-		<version>4.1.2.Final</version>
+		<artifactId>hibernate-core</artifactId>
+		<version>4.0.1.Final</version>
 	</dependency>
   </dependencies>
   <profiles>
