--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,4 +27,10 @@
   <welcome-file-list>
     <welcome-file>Index</welcome-file>
   </welcome-file-list>
+  <jsp-config>
+  <jsp-property-group>
+    <url-pattern>*</url-pattern>
+    <trim-directive-whitespaces>true</trim-directive-whitespaces>
+  </jsp-property-group>
+</jsp-config>
 </web-app>
