adding album info

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,13 @@
 		<servlet-name>Search</servlet-name>
 		<servlet-class>com.jin.tpdb.Search</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>jsp</servlet-name>
+		<init-param>
+			<param-name>trimSpaces</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>IndexController</servlet-name>
 		<url-pattern>/Index</url-pattern>
@@ -30,11 +37,5 @@
 	<welcome-file-list>
 		<welcome-file>Index</welcome-file>
 	</welcome-file-list>
-	<jsp-config>
-		<jsp-property-group>
-			<url-pattern>*.jsp</url-pattern>
-			<url-pattern>*.tag</url-pattern>
-			<trim-directive-whitespaces>true</trim-directive-whitespaces>
-		</jsp-property-group>
-	</jsp-config>
+
 </web-app>
