trying to handle news insert

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,6 +19,10 @@
     <servlet-name>ArtistsController</servlet-name>
     <servlet-class>com.jin.tpdb.controller.ArtistsController</servlet-class>
   </servlet>
+    <servlet>
+    <servlet-name>EditNewsController</servlet-name>
+    <servlet-class>com.jin.tpdb.controller.EditNewsController</servlet-class>
+  </servlet>
 	<servlet>
 		<servlet-name>Search</servlet-name>
 		<servlet-class>com.jin.tpdb.Search</servlet-class>
@@ -34,6 +38,10 @@
   <servlet-mapping>
     <servlet-name>NewsController</servlet-name>
     <url-pattern>/news</url-pattern>
+  </servlet-mapping>
+    <servlet-mapping>
+    <servlet-name>EditNewsController</servlet-name>
+    <url-pattern>/contribute/news/add</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>ArtistsController</servlet-name>
