--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,9 +19,13 @@
     <servlet-name>ArtistsController</servlet-name>
     <servlet-class>com.jin.tpdb.controller.ArtistsController</servlet-class>
   </servlet>
-    <servlet>
+  <servlet>
     <servlet-name>EditNewsController</servlet-name>
     <servlet-class>com.jin.tpdb.controller.EditNewsController</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>EditArtistController</servlet-name>
+    <servlet-class>com.jin.tpdb.controller.EditArtistController</servlet-class>
   </servlet>
 	<servlet>
 		<servlet-name>Search</servlet-name>
@@ -39,9 +43,13 @@
     <servlet-name>NewsController</servlet-name>
     <url-pattern>/news</url-pattern>
   </servlet-mapping>
-    <servlet-mapping>
+  <servlet-mapping>
     <servlet-name>EditNewsController</servlet-name>
     <url-pattern>/contribute/news/add</url-pattern>
+  </servlet-mapping>
+    <servlet-mapping>
+    <servlet-name>EditArtistController</servlet-name>
+    <url-pattern>/contribute/artist/add</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>ArtistsController</servlet-name>
