--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,16 @@
 		<scope>provided</scope>
     </dependency>
 	<!-- i [jin] added this dependency -->
-	<dependency>
-		<groupId>org.hibernate</groupId>
-		<artifactId>hibernate-core</artifactId>
-		<version>4.0.1.Final</version>
-	</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>4.0.1.Final</version>
+		</dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.2.2</version>
+    </dependency>
   </dependencies>
   <profiles>
     <profile>
