--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,6 +31,10 @@
     <servlet-name>EditAlbumController</servlet-name>
     <servlet-class>com.jin.tpdb.controller.contribute.EditAlbumController</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>UploaderController</servlet-name>
+    <servlet-class>com.jin.tpdb.controller.UploaderController</servlet-class>
+  </servlet>
 	<servlet>
 		<servlet-name>Search</servlet-name>
 		<servlet-class>com.jin.tpdb.Search</servlet-class>
@@ -63,10 +67,15 @@
     <servlet-name>ArtistsController</servlet-name>
     <url-pattern>/artists/</url-pattern>
   </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>UploaderController</servlet-name>
+    <url-pattern>/uploader</url-pattern>
+  </servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>Search</servlet-name>
 		<url-pattern>/search</url-pattern>
 	</servlet-mapping>
+
 	<welcome-file-list>
 		<welcome-file>Index</welcome-file>
 		<welcome-file>index.jsp</welcome-file>
