--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
 		  <artifactId>commons-io</artifactId>
 		  <version>1.3.2</version>
     </dependency>
+    <dependency>
+		  <groupId>org.apache.tomcat</groupId>
+		  <artifactId>catalina</artifactId>
+		  <version>6.0.35</version>
+    </dependency>
   </dependencies>
   <profiles>
     <profile>
