--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -90,7 +90,7 @@
 	</servlet-mapping>
 	<servlet-mapping>
 	  <servlet-name>fileServing</servlet-name>
-	  <url-pattern>/images/up/*</url-pattern>
+	  <url-pattern>/images/covers/*</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>Index</welcome-file>
