--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
 		  <artifactId>json-simple</artifactId>
 		  <version>1.1.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.imgscalr</groupId>
+      <artifactId>imgscalr-lib</artifactId>
+      <version>4.2</version>
+    </dependency>
   </dependencies>
   <profiles>
     <profile>
