--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
       <artifactId>imgscalr-lib</artifactId>
       <version>4.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.6.3</version>
+		</dependency>
   </dependencies>
   <profiles>
     <profile>
