--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -56,6 +56,10 @@
 	 </init-param>
 	 <load-on-startup>1</load-on-startup>
 	</servlet>
+	<servlet>
+	<servlet-name>AboutPage</servlet-name>
+	 <jsp-file>about.jsp</jsp-file>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>IndexController</servlet-name>
 		<url-pattern>/Index</url-pattern>
@@ -96,9 +100,13 @@
 	  <servlet-name>fileServing</servlet-name>
 	  <url-pattern>/images/albums/*</url-pattern>
 	</servlet-mapping>
-	 <servlet-mapping>
+	<servlet-mapping>
     <servlet-name>AjaxDataController</servlet-name>
     <url-pattern>/api/</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>AboutPage</servlet-name>
+    <url-pattern>/about/</url-pattern>
   </servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>Index</welcome-file>
