--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -171,6 +171,14 @@
 		<filter-name>gzipFilter</filter-name>
 		<filter-class>net.sf.ehcache.constructs.web.filter.GzipFilter</filter-class>
 	</filter>
+	<filter>
+		<filter-name>TimeFilter</filter-name>
+		<filter-class>com.dvlcube.filter.TimeFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>TimeFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	<filter-mapping>
 		<filter-name>gzipFilter</filter-name>
 		<url-pattern>*</url-pattern>
