--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -171,13 +171,21 @@
 		<filter-name>gzipFilter</filter-name>
 		<filter-class>net.sf.ehcache.constructs.web.filter.GzipFilter</filter-class>
 	</filter>
-	<filter>
+	<!-- <filter>
 		<filter-name>TimeFilter</filter-name>
 		<filter-class>com.dvlcube.filter.TimeFilter</filter-class>
+	</filter> -->
+	<filter>
+		<filter-name>CharsetFilter</filter-name>
+		<filter-class>com.jin.filter.CharsetFilter</filter-class>
 	</filter>
 	<filter-mapping>
 		<filter-name>TimeFilter</filter-name>
 		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>CharsetFilter</filter-name>
+		<servlet-name>*</servlet-name>
 	</filter-mapping>
 	<filter-mapping>
 		<filter-name>gzipFilter</filter-name>
@@ -197,4 +205,7 @@
 		<filter-name>jsCache</filter-name>
 		<url-pattern>*.js</url-pattern>
 	</filter-mapping>
+	<session-config>
+		<tracking-mode>COOKIE</tracking-mode>
+	</session-config>
 </web-app>
