--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -171,18 +171,18 @@
 		<filter-name>gzipFilter</filter-name>
 		<filter-class>net.sf.ehcache.constructs.web.filter.GzipFilter</filter-class>
 	</filter>
-	<!-- <filter>
+	<filter>
 		<filter-name>TimeFilter</filter-name>
 		<filter-class>com.dvlcube.filter.TimeFilter</filter-class>
-	</filter> -->
+	</filter>
 	<filter>
 		<filter-name>CharsetFilter</filter-name>
 		<filter-class>com.jin.filter.CharsetFilter</filter-class>
 	</filter>
-	<filter-mapping>
+	<!-- <filter-mapping>
 		<filter-name>TimeFilter</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+	</filter-mapping> -->
 	<filter-mapping>
 		<filter-name>CharsetFilter</filter-name>
 		<servlet-name>*</servlet-name>
