--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -179,10 +179,16 @@
 		<filter-name>CharsetFilter</filter-name>
 		<filter-class>com.jin.filter.CharsetFilter</filter-class>
 	</filter>
-	<!-- <filter-mapping>
-		<filter-name>TimeFilter</filter-name>
+	<!-- <filter-mapping> <filter-name>TimeFilter</filter-name> <url-pattern>/*</url-pattern> 
+		</filter-mapping> -->
+	<filter>
+		<filter-name>SimplePageCachingFilter</filter-name>
+		<filter-class>net.sf.ehcache.constructs.web.filter.SimplePageCachingFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>SimplePageCachingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping> -->
+	</filter-mapping>
 	<filter-mapping>
 		<filter-name>CharsetFilter</filter-name>
 		<servlet-name>*</servlet-name>
