--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -171,18 +171,21 @@
 		<filter-name>gzipFilter</filter-name>
 		<filter-class>net.sf.ehcache.constructs.web.filter.GzipFilter</filter-class>
 	</filter>
+	<!--  
 	<filter>
 		<filter-name>TimeFilter</filter-name>
 		<filter-class>com.dvlcube.filter.TimeFilter</filter-class>
 	</filter>
+		<filter-mapping>
+		<filter-name>TimeFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	-->
 	<filter>
 		<filter-name>CharsetFilter</filter-name>
 		<filter-class>com.jin.filter.CharsetFilter</filter-class>
 	</filter>
-	<filter-mapping>
-		<filter-name>TimeFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+
 	<!-- <filter> <filter-name>SimplePageCachingFilter</filter-name> <filter-class>net.sf.ehcache.constructs.web.filter.SimplePageCachingFilter</filter-class> 
 		</filter> <filter-mapping> <filter-name>SimplePageCachingFilter</filter-name> 
 		<url-pattern>/artists/</url-pattern> </filter-mapping> -->
@@ -207,6 +210,7 @@
 	<filter-mapping>
 		<filter-name>jsCache</filter-name>
 		<url-pattern>*.js</url-pattern>
+		<servlet-name>*</servlet-name>
 	</filter-mapping>
 	<session-config>
 		<tracking-mode>COOKIE</tracking-mode>
