--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -152,7 +152,7 @@
 		<filter-class>com.samaxes.filter.CacheFilter</filter-class>
 		<init-param>
 			<param-name>expirationTime</param-name>
-			<param-value>604800</param-value>
+			<param-value>2592000</param-value>
 		</init-param>
 	</filter>
 	<filter>
@@ -164,21 +164,24 @@
 		</init-param>
 		<init-param>
 			<param-name>expirationTime</param-name>
-			<param-value>216000</param-value>
+			<param-value>2592000</param-value>
+		</init-param>
+	</filter>
+	<filter>
+		<filter-name>ServletCache</filter-name>
+		<filter-class>com.samaxes.filter.CacheFilter</filter-class>
+		<init-param>
+			<param-name>expirationTime</param-name>
+			<param-value>200</param-value>
 		</init-param>
 	</filter>
 	<filter>
 		<filter-name>gzipFilter</filter-name>
 		<filter-class>net.sf.ehcache.constructs.web.filter.GzipFilter</filter-class>
 	</filter>
-	<!-- <filter>
-		<filter-name>TimeFilter</filter-name>
-		<filter-class>com.dvlcube.filter.TimeFilter</filter-class>
-	</filter>
-		<filter-mapping>
-		<filter-name>TimeFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping> -->
+	<!-- <filter> <filter-name>TimeFilter</filter-name> <filter-class>com.dvlcube.filter.TimeFilter</filter-class> 
+		</filter> <filter-mapping> <filter-name>TimeFilter</filter-name> <url-pattern>/*</url-pattern> 
+		</filter-mapping> -->
 
 	<filter>
 		<filter-name>CharsetFilter</filter-name>
@@ -194,22 +197,29 @@
 	</filter-mapping>
 	<filter-mapping>
 		<filter-name>gzipFilter</filter-name>
-		<servlet-name>*</servlet-name>
-		<url-pattern>*.css</url-pattern>
-		<url-pattern>*.js</url-pattern>
+		<url-pattern>*</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>ServletCache</filter-name>
+		<url-pattern>*</url-pattern>
 	</filter-mapping>
 	<filter-mapping>
 		<filter-name>imagesCache</filter-name>
 		<url-pattern>/images/*</url-pattern>
 	</filter-mapping>
 	<filter-mapping>
-		<filter-name>cssCache</filter-name>
-		<url-pattern>*.css</url-pattern>
+		<filter-name>imagesCache</filter-name>
+		<url-pattern>*.ico</url-pattern>
 	</filter-mapping>
 	<filter-mapping>
 		<filter-name>jsCache</filter-name>
 		<url-pattern>*.js</url-pattern>
 	</filter-mapping>
+	<filter-mapping>
+		<filter-name>cssCache</filter-name>
+		<url-pattern>*.css</url-pattern>
+	</filter-mapping>
+	
 	<session-config>
 		<tracking-mode>COOKIE</tracking-mode>
 	</session-config>
