Commit from JBoss Tools

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
 			<version>4.0.1.Final</version>
 		</dependency>
 		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-ehcache</artifactId>
+			<version>4.0.1.Final</version>
+		</dependency>
+		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.2.2</version>
@@ -77,6 +82,7 @@
 			<!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
 			<id>openshift</id>
 			<build>
+			
 				<finalName>pablow</finalName>
 				<plugins>
 					<plugin>
