--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -199,10 +199,10 @@
 		<filter-name>gzipFilter</filter-name>
 		<url-pattern>*</url-pattern>
 	</filter-mapping>
-	<filter-mapping>
+	<!-- <filter-mapping>
 		<filter-name>ServletCache</filter-name>
 		<url-pattern>*</url-pattern>
-	</filter-mapping>
+	</filter-mapping> -->
 	<filter-mapping>
 		<filter-name>imagesCache</filter-name>
 		<url-pattern>/images/*</url-pattern>
