--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
 			<version>1.6.3</version>
 		</dependency>
 		<dependency>
+			<groupId>de.u-mass</groupId>
+			<artifactId>lastfm-java</artifactId>
+			<version>0.1.2</version>
+		</dependency>
+		<dependency>
 			<groupId>com.samaxes.filter</groupId>
 			<artifactId>cachefilter</artifactId>
 			<version>2.0</version>
