Commit from JBoss Tools

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -59,7 +59,7 @@
 	</servlet>
 	<servlet>
 		<servlet-name>ExternalAPIs</servlet-name>
-		<servlet-class>com.jin.tpdb.controllers.ExternalAPIs</servlet-class>
+		<servlet-class>com.jin.tpdb.controller.ExternalAPIs</servlet-class>
 	</servlet>
 
 	<servlet>
