--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,11 @@
 			<artifactId>catalina</artifactId>
 			<version>6.0.35</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.imgscalr</groupId>
 			<artifactId>imgscalr-lib</artifactId>
