--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
 			<version>1</version>
 		</dependency>
 		<dependency>
+			<groupId>com.jin.util</groupId>
+			<artifactId>jsonmaker</artifactId>
+			<version>1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.jboss.spec</groupId>
 			<artifactId>jboss-javaee-6.0</artifactId>
 			<version>1.0.0.Final</version>
